[gd_scene load_steps=4 format=3 uid="uid://beoswm81km06x"]

[ext_resource type="Script" path="res://libs/gui/interfaces/plugin_editor/plugin_editor.gd" id="1_afc2x"]
[ext_resource type="PackedScene" uid="uid://6x8cc0fngicq" path="res://libs/gui/interfaces/plugin_editor/modules/code_edit/code_edit.tscn" id="2_mo1oq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ldw3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 1
border_color = Color(0.439216, 0.729412, 0.980392, 1)

[node name="PluginEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afc2x")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 35.0
offset_right = -5.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 180

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
layout_mode = 2
offset_right = 180.0
offset_bottom = 607.0
split_offset = 250

[node name="FileList" type="VBoxContainer" parent="HSplitContainer/VSplitContainer"]
custom_minimum_size = Vector2(180, 150)
layout_mode = 2
offset_right = 180.0
offset_bottom = 250.0

[node name="Label" type="Label" parent="HSplitContainer/VSplitContainer/FileList"]
layout_mode = 2
offset_right = 180.0
offset_bottom = 35.0
text = "插件列表"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FileSearch" type="LineEdit" parent="HSplitContainer/VSplitContainer/FileList"]
layout_mode = 2
offset_top = 39.0
offset_right = 180.0
offset_bottom = 70.0
placeholder_text = "搜索插件列表"

[node name="ItemList" type="ItemList" parent="HSplitContainer/VSplitContainer/FileList"]
layout_mode = 2
offset_top = 74.0
offset_right = 180.0
offset_bottom = 214.0
size_flags_vertical = 3

[node name="EditButton" type="Button" parent="HSplitContainer/VSplitContainer/FileList"]
layout_mode = 2
offset_top = 218.0
offset_right = 180.0
offset_bottom = 250.0
text = "在新窗口中打开"

[node name="FuncList" type="VBoxContainer" parent="HSplitContainer/VSplitContainer"]
custom_minimum_size = Vector2(180, 150)
layout_mode = 2
offset_top = 258.0
offset_right = 180.0
offset_bottom = 607.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VSplitContainer/FuncList"]
layout_mode = 2
offset_right = 180.0
offset_bottom = 35.0

[node name="Label" type="Label" parent="HSplitContainer/VSplitContainer/FuncList/HBoxContainer"]
layout_mode = 2
offset_right = 146.0
offset_bottom = 35.0
size_flags_horizontal = 3
text = "函数列表"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CaseSortButton" type="Button" parent="HSplitContainer/VSplitContainer/FuncList/HBoxContainer"]
layout_mode = 2
offset_left = 150.0
offset_right = 180.0
offset_bottom = 35.0
tooltip_text = "切换首字母排序"
toggle_mode = true
text = "Aa"
flat = true

[node name="FuncSearch" type="LineEdit" parent="HSplitContainer/VSplitContainer/FuncList"]
layout_mode = 2
offset_top = 39.0
offset_right = 180.0
offset_bottom = 70.0
placeholder_text = "搜索函数列表"

[node name="ItemList" type="ItemList" parent="HSplitContainer/VSplitContainer/FuncList"]
layout_mode = 2
offset_top = 74.0
offset_right = 180.0
offset_bottom = 349.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
offset_left = 188.0
offset_right = 1142.0
offset_bottom = 607.0

[node name="CodeEdit" parent="HSplitContainer/VBoxContainer" instance=ExtResource("2_mo1oq")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 954.0
offset_bottom = 578.0
grow_horizontal = 1
grow_vertical = 1
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")

[node name="StatusPanel" type="Control" parent="HSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
anchors_preset = 0
offset_top = 582.0
offset_right = 954.0
offset_bottom = 607.0
grow_horizontal = 2
grow_vertical = 0

[node name="CodeStatus" type="Label" parent="HSplitContainer/VBoxContainer/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "当前文件中未发现任何错误"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HideDockButton" type="Button" parent="HSplitContainer/VBoxContainer/StatusPanel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 21.0
grow_vertical = 2
tooltip_text = "隐藏左侧栏"
toggle_mode = true
text = "<"
flat = true
expand_icon = true

[node name="LineEdit" type="SpinBox" parent="HSplitContainer/VBoxContainer/StatusPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -27.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 0
min_value = 1.0
value = 1.0
alignment = 1
update_on_text_changed = true
prefix = "第"
suffix = "行"

[node name="SearchPanel" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
visible = false
layout_mode = 2
offset_top = 575.0
offset_right = 954.0
offset_bottom = 607.0

[node name="SearchInput" type="LineEdit" parent="HSplitContainer/VBoxContainer/SearchPanel"]
layout_mode = 2
offset_right = 585.0
offset_bottom = 32.0
size_flags_horizontal = 3

[node name="SearchStatus" type="Label" parent="HSplitContainer/VBoxContainer/SearchPanel"]
visible = false
layout_mode = 2
offset_left = 576.0
offset_right = 585.0
offset_bottom = 35.0

[node name="SearchForward" type="Button" parent="HSplitContainer/VBoxContainer/SearchPanel"]
layout_mode = 2
offset_left = 589.0
offset_right = 649.0
offset_bottom = 32.0
text = "下一个"

[node name="SearchBackward" type="Button" parent="HSplitContainer/VBoxContainer/SearchPanel"]
layout_mode = 2
offset_left = 653.0
offset_right = 713.0
offset_bottom = 32.0
text = "上一个"

[node name="CaseCheckBox" type="CheckBox" parent="HSplitContainer/VBoxContainer/SearchPanel"]
layout_mode = 2
offset_left = 717.0
offset_right = 829.0
offset_bottom = 32.0
text = "区分大小写"

[node name="FullMatchCheckBox" type="CheckBox" parent="HSplitContainer/VBoxContainer/SearchPanel"]
layout_mode = 2
offset_left = 833.0
offset_right = 929.0
offset_bottom = 32.0
text = "全字匹配"

[node name="CloseButton" type="Button" parent="HSplitContainer/VBoxContainer/SearchPanel"]
layout_mode = 2
offset_left = 933.0
offset_right = 954.0
offset_bottom = 32.0
text = "X"
flat = true

[node name="EditorPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 33.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0ldw3")

[node name="Menu" type="HBoxContainer" parent="EditorPanel"]
layout_mode = 0
offset_left = 4.0
offset_right = 343.0
offset_bottom = 32.0

[node name="SaveButton" type="Button" parent="EditorPanel/Menu"]
layout_mode = 2
offset_right = 76.0
offset_bottom = 32.0
text = "保存文件"
flat = true

[node name="SaveReloadButton" type="Button" parent="EditorPanel/Menu"]
layout_mode = 2
offset_left = 80.0
offset_right = 172.0
offset_bottom = 32.0
text = "保存并重载"
flat = true

[node name="HelpButton" type="Button" parent="EditorPanel/Menu"]
layout_mode = 2
offset_left = 176.0
offset_right = 279.0
offset_bottom = 32.0
text = "打开API文档"
flat = true

[node name="Edit" type="HBoxContainer" parent="EditorPanel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -214.0
offset_right = -12.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
alignment = 2

[node name="EditStatus" type="Label" parent="EditorPanel/Edit"]
layout_mode = 2
offset_left = 150.0
offset_right = 202.0
offset_bottom = 35.0
text = "1 : 1"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="text_changed" from="HSplitContainer/VSplitContainer/FileList/FileSearch" to="." method="_on_file_search_text_changed"]
[connection signal="item_selected" from="HSplitContainer/VSplitContainer/FileList/ItemList" to="." method="_on_file_list_item_selected"]
[connection signal="button_down" from="HSplitContainer/VSplitContainer/FileList/EditButton" to="." method="_on_edit_button_button_down"]
[connection signal="toggled" from="HSplitContainer/VSplitContainer/FuncList/HBoxContainer/CaseSortButton" to="." method="_on_case_sort_button_toggled"]
[connection signal="text_changed" from="HSplitContainer/VSplitContainer/FuncList/FuncSearch" to="." method="_on_func_search_text_changed"]
[connection signal="item_selected" from="HSplitContainer/VSplitContainer/FuncList/ItemList" to="." method="_on_func_list_item_selected"]
[connection signal="caret_changed" from="HSplitContainer/VBoxContainer/CodeEdit" to="." method="_on_CodeEdit_caret_changed"]
[connection signal="text_changed" from="HSplitContainer/VBoxContainer/CodeEdit" to="." method="_on_CodeEdit_text_changed"]
[connection signal="update_finished" from="HSplitContainer/VBoxContainer/CodeEdit" to="." method="_on_CodeEdit_update_finished"]
[connection signal="toggled" from="HSplitContainer/VBoxContainer/StatusPanel/HideDockButton" to="." method="_on_hide_dock_button_toggled"]
[connection signal="value_changed" from="HSplitContainer/VBoxContainer/StatusPanel/LineEdit" to="." method="_on_line_edit_value_changed"]
[connection signal="text_changed" from="HSplitContainer/VBoxContainer/SearchPanel/SearchInput" to="." method="_on_search_input_text_changed"]
[connection signal="button_down" from="EditorPanel/Menu/SaveButton" to="." method="_on_SaveButton_button_down"]
[connection signal="button_down" from="EditorPanel/Menu/SaveReloadButton" to="." method="_on_SaveReloadButton_button_down"]
[connection signal="button_down" from="EditorPanel/Menu/HelpButton" to="." method="_on_HelpButton_button_down"]
